--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <html class="no-js"> <!--<![endif]-->
     <head>
-        <title>Mr. Dark Joe</title>
+        <title>Mr. ES-SAKHY DRISS</title>
 
         <!-- meta -->
         <meta charset="utf-8">
@@ -36,8 +36,8 @@
         <!-- Header area -->
         <header id="header">
             <div class="center text-center">
-                <h1 class="bigheadline">Dark Joe</h1>
-                <h4 class="subheadline">The Worst Front End Developer</h4>
+                <h1 class="bigheadline">ES-SAKHY DRISS</h1>
+                <h4 class="subheadline">Android Front End Developer</h4>
             </div>
             <div class="bottom">
                 <a data-scroll href="#navigation" class="scrollDown animated pulse" id="scrollToContent"><i class="pe-7s-angle-down-circle pe-va"></i></a>
@@ -293,10 +293,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p class="copyright">© Copyright 2014 <a href="#" target="_blank">Your Website Link</a></p>
+                        <p class="copyright">© Copyright 2020 <a href="#" target="_blank">https://drissessakhy.github.io</a></p>
                     </div>
                     <div class="col-sm-6">
-                        <p class="designed">Theme by <a href="http://themewagon.com" target="_blank">Themewagon</a></p>
+                        <p class="designed">Theme by <a href="#" target="_blank">Driss ES-SAKHY</a></p>
                     </div>
                 </div>
             </div>
