--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <header id="header">
             <div class="center text-center">
                 <h1 class="bigheadline">ES-SAKHY DRISS</h1>
-                <h4 class="subheadline">Android Front End Developer</h4>
+                <h4 class="subheadline">Android developer skilled at Java, Firebase, JavaFx, PHP, MySql</h4>
             </div>
             <div class="bottom">
                 <a data-scroll href="#navigation" class="scrollDown animated pulse" id="scrollToContent"><i class="pe-7s-angle-down-circle pe-va"></i></a>
@@ -49,7 +49,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-6">
-                        <div class="logo"><a data-scroll href="#body" class="logo-text">Dark Joe</a></div>
+                        <div class="logo"><a data-scroll href="#body" class="logo-text">ES-SAKHY Driss</a></div>
                     </div>
                     <div class="col-xs-6">
                         <div class="nav">
@@ -62,6 +62,8 @@
                                      <li><a data-scroll href="#portfolio">Portfolio <i class="pe-7s-glasses"></i></a><span class="menu-effect"></span></li>
                                      <li><a data-scroll href="#testimonial">Testimonial <i class="pe-7s-comment"></i><span class="menu-effect"></span></a></li>
                                      <li><a data-scroll href="#contact">Contact <i class="pe-7s-help1"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="/Privacy-Policy.html">Privacy Policy <i class="pe-7s-help1"></i></a><span class="menu-effect"></span></li>
+                                     <li><a data-scroll href="/Terms-And-Conditions.html">Terms & Conditions <i class="pe-7s-help1"></i></a><span class="menu-effect"></span></li>
                                  </ul>
                              </div>
                         </div>
@@ -241,12 +243,12 @@
                         <div class="col-sm-6">
                             <div class="moreDetails">
                                 <h2 class="con-title">More About me</h2>
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum animi repudiandae nihil aspernatur repellat temporibus doloremque sint ea laboriosam, excepturi iure inventore rerum voluptatibus, suscipit totam, sit necessitatibus. Rerum, blanditiis. </p>
+                                <p> I am an android developer skilled at Java, Firebase, JavaFx, PHP, MySql coding and android application development, highly experienced in android application desgin, payment gateways. Thus, I'll assure you that you will be happy with your application and give you the best I can do.</p>
                                 <ul class="address">
                                     <li><i class="pe-7s-map-marker"></i><span>1600 Pennsylvania Ave NW,<br>Washington, DC 20500,<br>United States</span></li>
-                                    <li><i class="pe-7s-mail"></i><span>example@gmail.com</span></li>
-                                    <li><i class="pe-7s-phone"></i><span>+1-202-555-0144</span></li>
-                                    <li><i class="pe-7s-global"></i><span><a href="#">www.themewagon.com</a></span></li>
+                                    <li><i class="pe-7s-mail"></i><span>mr.essakhy.driss@gmail.com</span></li>
+                                    <li><i class="pe-7s-phone"></i><span>+2126 41 08 31 89</span></li>
+                                    <li><i class="pe-7s-global"></i><span><a href="https://drissessakhy.github.io/me/">https://drissessakhy.github.io/me/</a></span></li>
                                 </ul>
                             </div>
                         </div>
@@ -275,11 +277,8 @@
                         <div class="col-xs-12">
                             <ul class="scoialinks">
                                 <li class="normal-txt">Find me on</li>
-                                <li class="social-icons"><a class="facebook" href="#"></a></li>
-                                <li class="social-icons"><a class="twitter" href="#"></a></li>
-                                <li class="social-icons"><a class="linkedin" href="#"></a></li>
-                                <li class="social-icons"><a class="google-plus" href="#"></a></li>
-                                <li class="social-icons"><a class="wordpress" href="#"></a></li>
+                                <li class="social-icons"><a class="facebook" href="facebook.com/developer.dix"></a></li>
+                                <li class="social-icons"><a class="linkedin" href="https://www.linkedin.com/in/driss-es-sakhy-5b831b13b/"></a></li>
                             </ul>
                         </div>
                     </div>
